# mr-rca-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: gitlab-ci.md
examples/: incident.json  merge-request.json
tests/: test_manifest.py  test_rca.py  test_review.py
toolkit/: __init__.py  cli.py  manifest.py  models.py  policies.py  rca.py  review.py
